--- a/Mission1/mission4-metrics.ipynb
+++ b/Mission1/mission4-metrics.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 一个小目标 mission three\n",
+    "# 一个小目标 mission four\n",
     "---\n",
     "\n",
     "\n",
     "## 任务\n",
-    "分别使用 xgboost 与 lightgbm 对客户逾期情况进行建模，预测用户是否会逾期\n"
+    "记录五个模型关于precision，rescore，f1，auc，roc的评分表格，画出auc和roc曲线图\n"
    ]
   },
   {
